force-app/main/default/objects/GAU_Expenditure__c/GAU_Expenditure__c.object-meta.xml
<CustomObject>
    <description>Record for the attribution of disbursements to specific funds. Creating these records draws revenue from the related fund. This object can be repurposed for other expendatures from GAUs as well.</description>
    <label>GAU Expenditure</label>
    <nameField>
        <displayFormat>GAUE-{00000}</displayFormat>
        <label>GAU Expenditure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAU Expenditures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>