force-app/main/default/objects/GAU_Expenditure__c/fields/General_Accounting_Unit__c.field-meta.xml
<CustomField>
    <fullName>General_Accounting_Unit__c</fullName>
    <description>Relationship to the general accounting unit being disbursed.</description>
    <label>General Accounting Unit</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipName>GAU_Expendatures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>